k8/backend.yaml
apiVersion: v1
kind: Pod
metadata:
  name: backend-pod
  labels:
    app: backend-app
spec:
  containers:
  - name: backend-container
    image: cristiank/corona_backend:1.0
    ports:
    - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  selector:
    app: backend-app
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000
  type: ClusterIP
